--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -9,30 +9,49 @@ box-sizing: border-box;
 
 nav {
    position: fixed;
+   padding-right: 20px;
+   padding-left: 20px;
    width: 100%;
    height: 60px;
    display: flex;
    justify-content: space-between;
    align-items: center;
+   background-color: #FCEED5;
    z-index: 1000;
+}
+
+#navlist {
+   list-style-type: none;
+   line-height: 23.558px;
+   font-style: normal;
+   font-weight: 700;
+   font-size: 15.705px;
 }
 
 .navlink {
    color: var(--Primary-Color-Dark-Blue, #003459);
-   font-size: 12.088px;
+   font-size: 16.088px;
    text-decoration: none;
-   font-style: normal;
-   font-weight: 700;
-   line-height: 18.131px; /* 150% */
+   
+    /* 150% */
 }
 
 nav #nav-left #navlist #navlink {
    text-decoration: none;
 }
 
+#navlist {
+   display: flex;
+   gap: 47.115px;
+   font-size: 15.705px;
+   font-style: normal;
+   line-height: 23.558px;
+}
+
 #nav-left {
    padding-left: 20px;
    display: flex;
+   gap: 47.115px;
    align-items: center;
 
 }
@@ -41,6 +60,7 @@ nav #nav-right {
    padding-right: 20px;
    display: flex;
    align-items: center;
+   gap: 47.115px;
 }
 
 #search-bar {
@@ -85,12 +105,14 @@ nav #nav-right {
 
 #languages {
    display: flex;
+   background-color: #FCEED5;
    padding: 9.816px 7.853px 7.853px 7.853px;
    justify-content: flex-end;
    align-items: center;
    gap: 3.926px;
    align-self: stretch;
    border: none;
+   outline: none;
    cursor: pointer;
 }
 
@@ -98,16 +120,31 @@ nav #nav-right {
 
 #landing-page {
    color: var(--Primary-Color-Dark-Blue-80, #002a48);
-   width: 1413.464px;
-   height: 682.193px;
+   width: 100%;
+   height: 510.193px;
    border-radius: 0 0 39.263px 39.263px;
    background: var(--Linear, linear-gradient(103deg, #FCEED5 6.43%, #FCEED5 78.33%, #FFE7BA 104.24%));
    padding-top: 80px;
 }
 
-
+/* Dogs List Container Styling */
+#container {
+   background-color: #FDFDFD;
+   padding:40px;
+}
 
 #footer {
    border-radius: 30.219px 30.219px 0 0;
+   width:100%;
+   padding:40px;
    background: linear-gradient(103deg, #FCEED5 6.43%, #FCEED5 78.33%, #FFE7BA 104.24%);
+}
+
+.foot-nav {
+   text-decoration: none;
+   color: var(--Neutral-Color-100, #00171F);
+   font-size: 16.088px;
+   font-style: normal;
+   font-weight: 500;
+   line-height: 18.131px; /* 150% */
 }
